// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Tests Should render the header with home 1`] = `
<div
  className="w-screen h-[8vh] z-10 bg-white dark:bg-dark-bg fixed border-b undefined"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="w-full cursor-pointer mr-2"
          src={Object {}}
        />
        <h1
          className="text-3xl font-bold font-lexend text-primary dark:text-dark-text-fill"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden lg:flex cursor-pointer"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            aria-current="page"
            className="text-primary"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/product"
            onClick={[Function]}
          >
            Product
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex lg:w-full justify-end "
    >
      <button
        className="px-4 mt-1 cursor-pointer"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <a
        href="/organization-login"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined"
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/register-organization"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8"
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="px-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 mr-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="p-2 w-full mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/organization-login"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/register-organization"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8"
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with no active 1`] = `
<div
  className="w-screen h-[8vh] z-10 bg-white dark:bg-dark-bg fixed border-b undefined"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="w-full cursor-pointer mr-2"
          src={Object {}}
        />
        <h1
          className="text-3xl font-bold font-lexend text-primary dark:text-dark-text-fill"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden lg:flex cursor-pointer"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/product"
            onClick={[Function]}
          >
            Product
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex lg:w-full justify-end "
    >
      <button
        className="px-4 mt-1 cursor-pointer"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <a
        href="/organization-login"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined"
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/register-organization"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8"
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="px-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 mr-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="p-2 w-full mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/organization-login"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/register-organization"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8"
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with no active 2`] = `
<div
  className="w-screen h-[8vh] z-10 bg-white dark:bg-dark-bg fixed border-b undefined"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="w-full cursor-pointer mr-2"
          src={Object {}}
        />
        <h1
          className="text-3xl font-bold font-lexend text-primary dark:text-dark-text-fill"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden lg:flex cursor-pointer"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/product"
            onClick={[Function]}
          >
            Product
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex lg:w-full justify-end "
    >
      <button
        className="px-4 mt-1 cursor-pointer"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <a
        href="/dashboard"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined"
          disabled={false}
          type="button"
        >
           
          Dashboard
           
        </button>
      </a>
      <button
        className="btn transparentbtn lg text-red-500 font-bolf dark:text-dark-text-fill mr-8 border border-red-600 dark:border-dark-text-fill"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
         
        Logout
         
      </button>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="px-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 mr-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="p-2 w-full mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/dashboard"
        onClick={[Function]}
      >
         
        Dashboard
      </a>
    </li>
    <button
      className="btn transparentbtn lg text-red-500 font-bolf dark:text-dark-text-fill mr-8 border border-red-600 dark:border-dark-text-fill"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
       
      Logout
       
    </button>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with no active 3`] = `
<div
  className="w-screen h-[8vh] z-10 bg-white dark:bg-dark-bg fixed border-b undefined"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="w-full cursor-pointer mr-2"
          src={Object {}}
        />
        <h1
          className="text-3xl font-bold font-lexend text-primary dark:text-dark-text-fill"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden lg:flex cursor-pointer"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            aria-current="page"
            className="text-primary"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/product"
            onClick={[Function]}
          >
            Product
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex lg:w-full justify-end "
    >
      <button
        className="px-4 mt-1 cursor-pointer"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <a
        href="/organization-login"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined"
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/register-organization"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8"
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="px-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 mr-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="p-2 w-full mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/organization-login"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/register-organization"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8"
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with pricing active 1`] = `
<div
  className="w-screen h-[8vh] z-10 bg-white dark:bg-dark-bg fixed border-b undefined"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="w-full cursor-pointer mr-2"
          src={Object {}}
        />
        <h1
          className="text-3xl font-bold font-lexend text-primary dark:text-dark-text-fill"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden lg:flex cursor-pointer"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            aria-current="page"
            className="text-primary"
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/product"
            onClick={[Function]}
          >
            Product
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex lg:w-full justify-end "
    >
      <button
        className="px-4 mt-1 cursor-pointer"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <a
        href="/organization-login"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined"
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/register-organization"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8"
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="px-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 mr-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="p-2 w-full mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/organization-login"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/register-organization"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8"
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;

exports[`Header Tests Should render the header with product active 1`] = `
<div
  className="w-screen h-[8vh] z-10 bg-white dark:bg-dark-bg fixed border-b undefined"
>
  <div
    className="px-3 flex justify-between items-center w-full h-full"
  >
    <div
      className="flex items-center h-full justify-between lg:w-full"
    >
      <a
        className="flex flex-row lg:px-5"
        href="/"
        onClick={[Function]}
      >
        <img
          alt="logo"
          className="w-full cursor-pointer mr-2"
          src={Object {}}
        />
        <h1
          className="text-3xl font-bold font-lexend text-primary dark:text-dark-text-fill"
        >
          PULSE
        </h1>
      </a>
      <ul
        className="hidden lg:flex cursor-pointer"
      >
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            className=""
            href="/pricing"
            onClick={[Function]}
          >
            Pricing
          </a>
        </li>
        <li
          className="px-5 text-xl dark:text-dark-text-fill"
        >
          <a
            aria-current="page"
            className="text-primary"
            href="/product"
            onClick={[Function]}
          >
            Product
          </a>
        </li>
      </ul>
    </div>
    <div
      className="hidden lg:flex lg:w-full justify-end "
    >
      <button
        className="px-4 mt-1 cursor-pointer"
        id="theme-switch"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-8"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <a
        href="/organization-login"
        onClick={[Function]}
      >
        <button
          className="btn primary lg undefined"
          disabled={false}
          type="button"
        >
           
          Sign In
           
        </button>
      </a>
      <a
        href="/register-organization"
        onClick={[Function]}
      >
        <button
          className="btn transparentbtn lg mr-8"
          disabled={false}
          type="button"
        >
           
          Register an organization
           
        </button>
      </a>
    </div>
    <div
      className="flex px-5 lg:hidden"
    >
      <button
        className="px-3"
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-6 mr-2"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"
          />
        </svg>
      </button>
      <button
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="w-7 dark:text-dark-text-fill"
          fill="none"
          stroke="currentColor"
          strokeWidth={2}
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 6h16M4 12h16M4 18h16"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </button>
    </div>
  </div>
  <ul
    className="hidden"
  >
    <li
      className="p-2 w-full mt-2 dark:text-dark-text-fill text-primary"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        Home
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        href="/pricing"
        onClick={[Function]}
      >
        Pricing
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill"
    >
      <a
        className="w-full"
        href="/product"
        onClick={[Function]}
      >
        Product
      </a>
    </li>
    <li
      className="p-2 w-full dark:text-dark-text-fill mt-6 mb-2 bg-primary text-white rounded-md px-[35%]"
    >
      <a
        className="w-full"
        href="/organization-login"
        onClick={[Function]}
      >
         
        Sign In
      </a>
    </li>
    <a
      href="/register-organization"
      onClick={[Function]}
    >
      <button
        className="btn transparentbtn lg mr-8"
        disabled={false}
        type="button"
      >
         
        Register an organization
         
      </button>
    </a>
  </ul>
</div>
`;
